# biomarcadores-neuroinflamacion-depresion-2020-2024

./: .zenodo.json  CITATION.cff  EXAMPLE_NOTEBOOK.ipynb  HUGGINGFACE_CARD.md  README.md  codemeta.json  kaggle-metadata.json  pyproject.toml  setup.py
biomarcadores_neuroinflam/: __init__.py
biomarcadores_neuroinflamacion/: __init__.py  cargador.py
notebooks/: biomarcadores_neuroinflamacion_analisis.ipynb
